[package]
edition = "2021"
name = "longbridge-c"
version = "0.2.34"
description = "Longbridge OpenAPI SDK for C"
homepage = "https://open.longbridgeapp.com/en/"
readme = "README.md"
repository = "https://github.com/longbridgeapp/openapi-sdk"
license = "MIT OR Apache-2.0"
keywords = ["longbridge", "openapi", "sdk"]
categories = ["api-bindings"]

[lib]
crate-type = ["cdylib"]

[dependencies]
longbridge = { path = "../rust" }
longbridge-c-macros = { path = "crates/macros" }

rust_decimal = { version = "1.23.1", features = ["maths"] }
tokio = { version = "1.19.2", features = ["rt-multi-thread"] }
once_cell = "1.12.0"
parking_lot = "0.12.1"
time = "0.3.9"

[build-dependencies]
cbindgen = "0.24.3"
