[package]
edition = "2021"
name = "longport-c"
version = "1.0.30"
description = "LongPort OpenAPI SDK for C"
homepage = "https://open.longportapp.com/en/"
readme = "README.md"
repository = "https://github.com/longportapp/openapi-sdk"
license = "MIT OR Apache-2.0"
keywords = ["longport", "openapi", "sdk"]
categories = ["api-bindings"]

[lib]
crate-type = ["cdylib"]

[dependencies]
longport = { path = "../rust" }
longport-c-macros = { path = "crates/macros" }

rust_decimal = { version = "1.23.1", features = ["maths"] }
tokio = { version = "1.19.2", features = ["rt-multi-thread"] }
once_cell = "1.12.0"
parking_lot = "0.12.1"
time = "0.3.9"

[build-dependencies]
cbindgen = "0.24.3"
