[package]
edition = "2021"
name = "longbridge-java"
version = "0.2.39"

[lib]
crate-type = ["cdylib"]

[dependencies]
longbridge = { path = "../rust" }
longbridge-java-macros = { path = "./crates/macros" }

jni = "0.19.0"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["rt-multi-thread"] }
once_cell = "1.12.0"
time = "0.3.9"
parking_lot = "0.12.1"
