[package]
edition = "2021"
name = "longport-java"
version = "2.1.5"

[lib]
crate-type = ["cdylib"]

[dependencies]
longport = { path = "../rust" }
longport-java-macros = { path = "./crates/macros" }

jni = "0.21.0"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["rt-multi-thread"] }
once_cell = "1.12.0"
time = "0.3.9"
parking_lot = "0.12.1"
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
