[package]
name = "longport-mcp"
version = "0.1.0"
edition.workspace = true

[dependencies]
poem-mcpserver = { version = "=0.1.6", features = ["sse"] }
poem-mcpserver-macros = { version = "=0.1.6" }
poem = { version = "=3.1.7", features = ["sse"] }
poem-derive = { version = "=3.1.4" }
serde = { version = "1.0.219", features = ["derive"] }
schemars = { version = "0.8.22", features = ["chrono"] }
longport = { path = "../rust" }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "sync"] }
clap = { version = "4.5.32", features = ["derive"] }
dotenvy = "0.15.7"
time = { version = "0.3.39", features = ["formatting", "parsing"] }
tracing-subscriber = "0.3.19"
serde_json = "1.0.140"
tracing-appender = "0.2.3"
tracing = "0.1.41"
