[package]
edition = "2021"
name = "longbridge-nodejs"
version = "0.2.68"

[lib]
crate-type = ["cdylib"]

[dependencies]
longbridge = { path = "../rust" }
longbridge-nodejs-macros = { path = "crates/macros" }

napi = { version = "2.12.3", default-features = false, features = [
    "napi4",
    "chrono_date",
    "async",
    "serde-json",
] }
napi-derive = "2.12.3"
rust_decimal = { version = "1.23.1", features = ["maths"] }
chrono = "0.4.19"
time = { version = "0.3.9", features = ["macros", "formatting"] }
tokio = { version = "1.18.2", features = ["rt", "time"] }
parking_lot = "0.12.1"
serde_json = "1.0.93"

[build-dependencies]
napi-build = "2.0.0"
