[package]
edition = "2021"
name = "longbridge-python"
version = "0.2.14"
description = "Longbridge OpenAPI SDK for Python"
homepage = "https://open.longbridgeapp.com/en/"
readme = "README.md"
repository = "https://github.com/longbridgeapp/openapi-sdk"
license = "MIT OR Apache-2.0"
keywords = ["longbridge", "openapi", "sdk"]
categories = ["api-bindings"]

[lib]
name = "longbridge"
crate-type = ["cdylib"]

[dependencies]
longbridge = { path = "../rust", version = "0.2.14", features = ["blocking"] }
longbridge-python-macros = { path = "crates/macros", version = "0.2.14" }

once_cell = "1.11.0"
pyo3 = { version = "0.16.4", features = ["extension-module"] }
rust_decimal = "1.23.1"
time = "0.3.9"

[build-dependencies]
pyo3-build-config = "0.16.4"

[package.metadata.maturin]
python-source = "pysrc"
