[package]
edition = "2021"
name = "longbridge-python"
version = "0.2.72"
description = "Longbridge OpenAPI SDK for Python"
homepage = "https://open.longbridgeapp.com/en/"
readme = "README.md"
repository = "https://github.com/longbridgeapp/openapi-sdk"
license = "MIT OR Apache-2.0"
keywords = ["longbridge", "openapi", "sdk"]
categories = ["api-bindings"]

[lib]
name = "longbridge"
crate-type = ["cdylib"]

[dependencies]
longbridge = { path = "../rust", features = ["blocking"] }
longbridge-python-macros = { path = "crates/macros" }

once_cell = "1.11.0"
parking_lot = "0.12.1"
pyo3 = { version = "0.19.2", features = ["extension-module"] }
pythonize = "0.19.0"
rust_decimal = "1.23.1"
serde_json = "1.0.93"
time = "0.3.9"
tokio = { version = "1.25.0", features = ["rt-multi-thread"] }

[build-dependencies]
pyo3-build-config = "0.16.4"

[package.metadata.maturin]
python-source = "pysrc"
