[package]
edition = "2021"
name = "longport-python"
version = "1.1.3"
description = "LongPort OpenAPI SDK for Python"
homepage = "https://open.longportapp.com/en/"
readme = "README.md"
repository = "https://github.com/longportapp/openapi-sdk"
license = "MIT OR Apache-2.0"
keywords = ["longport", "openapi", "sdk"]
categories = ["api-bindings"]

[lib]
name = "longport"
crate-type = ["cdylib"]

[dependencies]
longport = { path = "../rust", features = ["blocking"] }
longport-python-macros = { path = "crates/macros" }

once_cell = "1.11.0"
parking_lot = "0.12.1"
pyo3 = { version = "0.22.5", features = ["extension-module"] }
pythonize = "0.22.0"
rust_decimal = "1.23.1"
serde_json = "1.0.93"
time = "0.3.9"
tokio = { version = "1.25.0", features = ["rt-multi-thread"] }

[build-dependencies]
pyo3-build-config = "0.16.4"
