[project]
name = "longbridge"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
description = "A Python library for Longbridge Open API"
readme = "README.md"
repository = "https://github.com/longbridgeapp/openapi-sdk"
dependencies = []

[license]
text = "MIT OR Apache-2.0"

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project.urls]
homepage = "https://open.longbridgeapp.com/en/"
documentation = "https://open.longbridgeapp.com/en/docs"
repository = "https://github.com/longbridgeapp/openapi-sdk"
changelog = "https://github.com/longbridgeapp/openapi-sdk/blob/master/python/CHANGELOG.md"
