[project]
name = "longport"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
description = "A Python library for LongPort Open API"
readme = "README.md"
repository = "https://github.com/longportapp/openapi"
requires-python = ">=3.7"
dependencies = []

[license]
text = "MIT OR Apache-2.0"

[build-system]
# requires = ["maturin>=1.0,<2.0"]
requires = ["maturin==1.7.4"]
build-backend = "maturin"

[project.urls]
homepage = "https://open.longportapp.com/en/"
documentation = "https://open.longportapp.com/en/docs"
repository = "https://github.com/longportapp/openapi"
changelog = "https://github.com/longportapp/openapi/blob/master/python/CHANGELOG.md"

[tool.maturin]
python-source = "pysrc"
