[package]
edition = "2021"
name = "longbridge"
version = "0.2.46"
description = "Longbridge OpenAPI SDK for Rust"
homepage = "https://open.longbridgeapp.com/en/"
readme = "README.md"
repository = "https://github.com/longbridgeapp/openapi-sdk"
license = "MIT OR Apache-2.0"
keywords = ["longbridge", "openapi", "sdk"]
categories = ["api-bindings"]

[features]
blocking = ["flume"]

[dependencies]
longbridge-wscli = { path = "crates/wsclient", version = "0.2.46" }
longbridge-httpcli = { path = "crates/httpclient", version = "0.2.46" }
longbridge-proto = { path = "crates/proto", version = "0.2.46" }
longbridge-candlesticks = { path = "crates/candlesticks", version = "0.2.46" }

tokio = { version = "1.18.2", features = [
  "time",
  "rt",
  "macros",
  "sync",
  "net",
] }
tokio-tungstenite = "0.17.1"
rust_decimal = { version = "1.23.1", features = ["serde-with-str", "maths"] }
num_enum = "0.5.7"
prost = "0.10.3"
tracing = "0.1.34"
bitflags = "1.3.2"
futures-util = "0.3.21"
time = { version = "0.3.9", features = ["parsing", "macros", "formatting"] }
flume = { version = "0.10.12", optional = true }
thiserror = "1.0.31"
strum = "0.24.0"
strum_macros = "0.24.0"
serde = "1.0.137"
serde_json = "1.0.81"
dotenv = "0.15.0"
http = "0.2.8"

[dev-dependencies]
tokio = { version = "1.18.2", features = ["rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
