[package]
edition = "2021"
name = "longport"
version = "2.0.3"
description = "LongPort OpenAPI SDK for Rust"
homepage = "https://open.longportapp.com/en/"
readme = "README.md"
repository = "https://github.com/longportapp/openapi-sdk"
license = "MIT OR Apache-2.0"
keywords = ["longport", "openapi", "sdk"]
categories = ["api-bindings"]

[features]
blocking = ["flume"]

[dependencies]
longport-wscli = { path = "crates/wsclient", version = "2.0.3" }
longport-httpcli = { path = "crates/httpclient", version = "2.0.3" }
longport-proto = { path = "crates/proto", version = "2.0.3" }
longport-candlesticks = { path = "crates/candlesticks", version = "2.0.3" }

tokio = { version = "1.18.2", features = [
  "time",
  "rt",
  "macros",
  "sync",
  "net",
] }
tokio-tungstenite = "0.21.0"
rust_decimal = { version = "1.23.1", features = ["serde-with-str", "maths"] }
num_enum = "0.7.0"
prost = "0.10.3"
tracing = "0.1.34"
bitflags = "2.4.1"
futures-util = "0.3.21"
time = { version = "0.3.36", features = ["parsing", "macros", "formatting"] }
flume = { version = "0.10.12", optional = true }
thiserror = "1.0.31"
strum = "0.24.0"
strum_macros = "0.24.0"
serde = "1.0.137"
serde_json = "1.0.81"
dotenv = "0.15.0"
http = "1.1.0"
comfy-table = "7.1.1"
itertools = "0.13.0"

[dev-dependencies]
tokio = { version = "1.18.2", features = ["rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
