[package]
name = "subscribe_candlesticks"
version = "0.1.0"
edition = "2021"

[dependencies]
longport = { path = "../../../rust" }
tokio = { version = "1.19", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
time = "0.3.37"
time-tz = "2.0.0"
