[package]
edition = "2021"
name = "longbridge-httpcli"
version = "0.2.9"
description = "Longbridge HTTP SDK for Rust"
license = "MIT OR Apache-2.0"

[dependencies]
futures-util = "0.3.21"
hmac = "0.12.1"
parking_lot = "0.12.0"
reqwest = { version = "0.11.10", default-features = false, features = [
  "rustls-tls",
  "json",
] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sha1 = "0.10.1"
sha2 = "0.10.2"
thiserror = "1.0.31"
tracing = { version = "0.1.34", features = ["attributes"] }
tokio = { version = "1.18.2", features = ["time"] }
percent-encoding = "2.1.0"

[dev-dependencies]
tokio = { version = "1.18.2", features = ["rt", "macros"] }
