[package]
name = "longbridge-wscli"
version = "0.1.0"
edition = "2021"

[dependencies]
longbridge-proto = { path = "../proto" }

tokio = { version = "1.18.2", features = [
    "time",
    "rt",
    "macros",
    "sync",
    "net",
] }
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
thiserror = "1.0.31"
futures-util = "0.3.21"
prost = "0.10.3"
byteorder = "1.4.3"
num_enum = "0.5.7"
url = "2.2.2"
flate2 = "1.0.23"
