[package]
name = "longport-wscli"
version = "1.0.6"
edition = "2021"
description = "LongPort Websocket SDK for Rust"
license = "MIT OR Apache-2.0"

[dependencies]
longport-proto = { path = "../proto", version = "1.0.6" }

tokio = { version = "1.18.2", features = [
  "time",
  "rt",
  "macros",
  "sync",
  "net",
] }
tokio-tungstenite = { version = "0.17.1", features = [
  "rustls-tls-webpki-roots",
] }
thiserror = "1.0.31"
futures-util = "0.3.21"
prost = "0.10.3"
byteorder = "1.4.3"
num_enum = "0.5.7"
url = "2.2.2"
flate2 = "1.0.23"
leaky-bucket = "1.0.1"
